# projinit

./: README.md  WORKLOG.md  pyproject.toml
docs/plans/: 2026-01-21-standalone-binary-design.md
projinit/: cli.py  core.py
sparkstart/: cli.py  core.py
sparkstart/scaffolders/: cpp.py  devcontainer.py  javascript.py  python.py  rust.py
sparkstart/templates/: common.py  cpp.py  devcontainer.py  javascript.py  python.py  rust.py
sparkstart/utils/: common.py  github.py
tests/: conftest.py  test_cli.py
